tests/typechecking/invalid/if2.ml
if true then 3-4.0 else 3-4.0